--- a/testing.ipynb
+++ b/testing.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -125,7 +125,7 @@
           "text": [
             "\n",
             "1 Failed download:\n",
-            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2024-01-01 -> 2024-02-16)')\n"
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2024-01-01 -> 2024-02-17)')\n"
           ]
         },
         {
@@ -133,7 +133,7 @@
           "output_type": "stream",
           "text": [
             "HDFCBANK.NS ['2024-01-19', '2024-01-12']\n",
-            " Prifit / Loss  ::  Series([], Name: price, dtype: float64)\n",
+            " Profit / Loss  ::  -136.02496337890625\n",
             " ------------------- \n",
             "\n"
           ]
@@ -141,17 +141,18 @@
       ],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.head(10)\n",
+        "nse_df = nse_df.head(20)\n",
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
         "\n",
         "for stock_id in list(set(nse_df['Symbol'])):\n",
         "    try:\n",
-        "        df, dates = get_recom(stock_id, '2024-01-01', '2024-02-16')\n",
+        "        df, dates = get_recom(stock_id, '2024-01-01', '2024-02-17')\n",
         "        if len(dates) >= 1:\n",
         "            \n",
         "            print(stock_id, dates)\n",
         "\n",
-        "            cprice = df.loc[df['Date'] == '2024-02-16', 'price']\n",
+        "            cprice = df.loc[df['Date'] == '2024-02-16', 'price'].values[0]\n",
+        "            #print(cprice)\n",
         "            invest_price = df.loc[df['Date'].isin(dates), 'price'].mean()\n",
         "\n",
         "            print( ' Profit / Loss  :: ' , (cprice - invest_price))\n",
@@ -167,309 +168,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Date</th>\n",
-              "      <th>price</th>\n",
-              "      <th>vol</th>\n",
-              "      <th>Week_Number</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2024-01-01</td>\n",
-              "      <td>3793.521973</td>\n",
-              "      <td>825907</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2024-01-02</td>\n",
-              "      <td>3765.750488</td>\n",
-              "      <td>1344068</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2024-01-03</td>\n",
-              "      <td>3674.722412</td>\n",
-              "      <td>1803075</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2024-01-04</td>\n",
-              "      <td>3649.887451</td>\n",
-              "      <td>3598144</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2024-01-05</td>\n",
-              "      <td>3720.659424</td>\n",
-              "      <td>1963127</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>2024-01-08</td>\n",
-              "      <td>3661.334473</td>\n",
-              "      <td>1067805</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>2024-01-09</td>\n",
-              "      <td>3672.880859</td>\n",
-              "      <td>1370944</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>2024-01-10</td>\n",
-              "      <td>3695.924316</td>\n",
-              "      <td>1292227</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>2024-01-11</td>\n",
-              "      <td>3718.320557</td>\n",
-              "      <td>1777909</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>2024-01-12</td>\n",
-              "      <td>3864.891357</td>\n",
-              "      <td>6813450</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>2024-01-15</td>\n",
-              "      <td>3885.794434</td>\n",
-              "      <td>2801505</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>2024-01-16</td>\n",
-              "      <td>3843.490479</td>\n",
-              "      <td>1432672</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>2024-01-17</td>\n",
-              "      <td>3866.683105</td>\n",
-              "      <td>3458696</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>2024-01-18</td>\n",
-              "      <td>3884.600098</td>\n",
-              "      <td>2239110</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>2024-01-19</td>\n",
-              "      <td>3943.050049</td>\n",
-              "      <td>2941975</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>2024-01-23</td>\n",
-              "      <td>3858.250000</td>\n",
-              "      <td>2618854</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>2024-01-24</td>\n",
-              "      <td>3841.800049</td>\n",
-              "      <td>2657709</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>2024-01-25</td>\n",
-              "      <td>3810.300049</td>\n",
-              "      <td>2205154</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>2024-01-29</td>\n",
-              "      <td>3801.000000</td>\n",
-              "      <td>1646747</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>2024-01-30</td>\n",
-              "      <td>3800.550049</td>\n",
-              "      <td>1411621</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>20</th>\n",
-              "      <td>2024-01-31</td>\n",
-              "      <td>3815.949951</td>\n",
-              "      <td>2459358</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>21</th>\n",
-              "      <td>2024-02-01</td>\n",
-              "      <td>3854.149902</td>\n",
-              "      <td>2363107</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>22</th>\n",
-              "      <td>2024-02-02</td>\n",
-              "      <td>3966.300049</td>\n",
-              "      <td>2826510</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>23</th>\n",
-              "      <td>2024-02-05</td>\n",
-              "      <td>3973.300049</td>\n",
-              "      <td>1691523</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>24</th>\n",
-              "      <td>2024-02-06</td>\n",
-              "      <td>4136.000000</td>\n",
-              "      <td>4474396</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>25</th>\n",
-              "      <td>2024-02-07</td>\n",
-              "      <td>4083.399902</td>\n",
-              "      <td>2124267</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>26</th>\n",
-              "      <td>2024-02-08</td>\n",
-              "      <td>4134.100098</td>\n",
-              "      <td>2345173</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>27</th>\n",
-              "      <td>2024-02-09</td>\n",
-              "      <td>4133.700195</td>\n",
-              "      <td>2100596</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>28</th>\n",
-              "      <td>2024-02-12</td>\n",
-              "      <td>4120.700195</td>\n",
-              "      <td>1013716</td>\n",
-              "      <td>7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>29</th>\n",
-              "      <td>2024-02-13</td>\n",
-              "      <td>4149.500000</td>\n",
-              "      <td>1257415</td>\n",
-              "      <td>7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>30</th>\n",
-              "      <td>2024-02-14</td>\n",
-              "      <td>4100.100098</td>\n",
-              "      <td>1391283</td>\n",
-              "      <td>7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>31</th>\n",
-              "      <td>2024-02-15</td>\n",
-              "      <td>4103.200195</td>\n",
-              "      <td>1091582</td>\n",
-              "      <td>7</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "         Date        price      vol  Week_Number\n",
-              "0  2024-01-01  3793.521973   825907            1\n",
-              "1  2024-01-02  3765.750488  1344068            1\n",
-              "2  2024-01-03  3674.722412  1803075            1\n",
-              "3  2024-01-04  3649.887451  3598144            1\n",
-              "4  2024-01-05  3720.659424  1963127            1\n",
-              "5  2024-01-08  3661.334473  1067805            2\n",
-              "6  2024-01-09  3672.880859  1370944            2\n",
-              "7  2024-01-10  3695.924316  1292227            2\n",
-              "8  2024-01-11  3718.320557  1777909            2\n",
-              "9  2024-01-12  3864.891357  6813450            2\n",
-              "10 2024-01-15  3885.794434  2801505            3\n",
-              "11 2024-01-16  3843.490479  1432672            3\n",
-              "12 2024-01-17  3866.683105  3458696            3\n",
-              "13 2024-01-18  3884.600098  2239110            3\n",
-              "14 2024-01-19  3943.050049  2941975            3\n",
-              "15 2024-01-23  3858.250000  2618854            4\n",
-              "16 2024-01-24  3841.800049  2657709            4\n",
-              "17 2024-01-25  3810.300049  2205154            4\n",
-              "18 2024-01-29  3801.000000  1646747            5\n",
-              "19 2024-01-30  3800.550049  1411621            5\n",
-              "20 2024-01-31  3815.949951  2459358            5\n",
-              "21 2024-02-01  3854.149902  2363107            5\n",
-              "22 2024-02-02  3966.300049  2826510            5\n",
-              "23 2024-02-05  3973.300049  1691523            6\n",
-              "24 2024-02-06  4136.000000  4474396            6\n",
-              "25 2024-02-07  4083.399902  2124267            6\n",
-              "26 2024-02-08  4134.100098  2345173            6\n",
-              "27 2024-02-09  4133.700195  2100596            6\n",
-              "28 2024-02-12  4120.700195  1013716            7\n",
-              "29 2024-02-13  4149.500000  1257415            7\n",
-              "30 2024-02-14  4100.100098  1391283            7\n",
-              "31 2024-02-15  4103.200195  1091582            7"
+              "3903.970703125"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df"
+        "df.loc[df['Date'].isin(['2024-01-19', '2024-01-12']), 'price'].mean()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "4128.2998046875"
+            ]
+          },
+          "execution_count": 37,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.loc[df['Date'] == '2024-02-16', 'price'].values[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
