--- a/testing.ipynb
+++ b/testing.ipynb
@@ -116,15 +116,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ASIANPAINT.NS ['2024-01-19', '2024-01-12']\n",
+            " Profit / Loss  ::  -213.9251708984375\n",
+            " ------------------- \n",
+            "\n",
+            "LT.NS ['2024-02-09']\n",
+            " Profit / Loss  ::  62.199951171875\n",
+            " ------------------- \n",
+            "\n",
+            "HDFCBANK.NS ['2024-01-19', '2024-01-12']\n",
+            " Profit / Loss  ::  -136.02496337890625\n",
+            " ------------------- \n",
+            "\n",
+            "MARUTI.NS ['2024-01-25']\n",
+            " Profit / Loss  ::  1499.400390625\n",
+            " ------------------- \n",
+            "\n",
+            "KOTAKBANK.NS ['2024-01-19', '2024-01-25', '2024-01-12']\n",
+            " Profit / Loss  ::  -53.4000244140625\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
             "\n",
-            "1 Failed download:\n",
+            "1 Failed download:\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AXISBANK.NS ['2024-01-19', '2024-01-25']\n",
+            " Profit / Loss  ::  -10.6500244140625\n",
+            " ------------------- \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
             "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2024-01-01 -> 2024-02-17)')\n"
           ]
         },
@@ -132,8 +174,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "HDFCBANK.NS ['2024-01-19', '2024-01-12']\n",
-            " Profit / Loss  ::  -136.02496337890625\n",
+            "BAJFINANCE.NS ['2024-02-02', '2024-01-25']\n",
+            " Profit / Loss  ::  -347.69970703125\n",
             " ------------------- \n",
             "\n"
           ]
@@ -165,6 +207,34 @@
         "        continue\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
