--- a/testing.ipynb
+++ b/testing.ipynb
@@ -184,6 +184,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.6263736263736264"
+            ]
+          },
+          "execution_count": 59,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "57 / ( 57 + 34)\n",
+        "# 62% stocks in profit\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 54,
       "metadata": {},
       "outputs": [
@@ -204,22 +225,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "14025.905033111572"
+              "0.7037264494417129"
             ]
           },
-          "execution_count": 55,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "profit_amt"
+        "profit_amt\n",
+        "\n",
+        "profit_amt / (profit_amt + 5905)\n",
+        "# 70% growth \n"
       ]
     },
     {
