--- a/testing.ipynb
+++ b/testing.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -109,6 +109,8 @@
         "    df['index'] = df['corr']*df['pc']\n",
         "    #print(df.sort_values(by = 'index', ascending= False).head(2))\n",
         "\n",
+        "    dates = sorted(dates, key=lambda x: datetime.strptime(x, '%Y-%m-%d'))\n",
+        "\n",
         "    return df1, dates\n",
         "\n",
         "    #return df"
@@ -138,18 +140,18 @@
         "            \n",
         "            print(stock_id, dates)\n",
         "\n",
-        "            cprice = df.loc[df['Date'] == '2024-02-16', 'price'].values[0]\n",
+        "            after_price = df[df['Date'] > dates[-1]]['price'].max()\n",
         "            #print(cprice)\n",
         "            invest_price = df.loc[df['Date'].isin(dates), 'price'].mean()\n",
         "\n",
-        "            print( ' Profit / Loss  :: ' , (cprice - invest_price))\n",
-        "            if (cprice - invest_price) >= 0:\n",
+        "            print( ' Profit / Loss  :: ' , (after_price - invest_price))\n",
+        "            if (after_price - invest_price) >= 0:\n",
         "                profit = profit + 1\n",
-        "                profit_amt = profit_amt + (cprice - invest_price)\n",
+        "                profit_amt = profit_amt + (after_price - invest_price)\n",
         "\n",
         "            else:\n",
         "                loss = loss + 1\n",
-        "                loss_amt = loss_amt + (cprice - invest_price)\n",
+        "                loss_amt = loss_amt + (after_price - invest_price)\n",
         "\n",
         "\n",
         "\n",
@@ -160,6 +162,226 @@
         "    except:\n",
         "        continue\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dates = ['2024-01-15', '2024-01-02', '2024-01-25']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'2024-01-25'"
+            ]
+          },
+          "execution_count": 77,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "dates = sorted(dates, key=lambda x: datetime.strptime(x, '%Y-%m-%d'))\n",
+        "dates[-1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "6378.10009765625"
+            ]
+          },
+          "execution_count": 67,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df[df['Date'] > '2024-01-25']['price'].max()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>price</th>\n",
+              "      <th>vol</th>\n",
+              "      <th>Week_Number</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>2024-01-29</td>\n",
+              "      <td>5871.649902</td>\n",
+              "      <td>214390</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>2024-01-30</td>\n",
+              "      <td>5862.950195</td>\n",
+              "      <td>203956</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>2024-01-31</td>\n",
+              "      <td>5991.100098</td>\n",
+              "      <td>588652</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>2024-02-01</td>\n",
+              "      <td>6124.399902</td>\n",
+              "      <td>1071955</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>2024-02-02</td>\n",
+              "      <td>6237.799805</td>\n",
+              "      <td>430426</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>2024-02-05</td>\n",
+              "      <td>6259.600098</td>\n",
+              "      <td>483413</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>2024-02-06</td>\n",
+              "      <td>6358.549805</td>\n",
+              "      <td>316205</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25</th>\n",
+              "      <td>2024-02-07</td>\n",
+              "      <td>6308.850098</td>\n",
+              "      <td>167852</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26</th>\n",
+              "      <td>2024-02-08</td>\n",
+              "      <td>6223.950195</td>\n",
+              "      <td>176758</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>27</th>\n",
+              "      <td>2024-02-09</td>\n",
+              "      <td>6277.899902</td>\n",
+              "      <td>154552</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>28</th>\n",
+              "      <td>2024-02-12</td>\n",
+              "      <td>6269.200195</td>\n",
+              "      <td>169271</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>29</th>\n",
+              "      <td>2024-02-13</td>\n",
+              "      <td>6295.700195</td>\n",
+              "      <td>168955</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>30</th>\n",
+              "      <td>2024-02-14</td>\n",
+              "      <td>6339.950195</td>\n",
+              "      <td>151149</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31</th>\n",
+              "      <td>2024-02-15</td>\n",
+              "      <td>6360.049805</td>\n",
+              "      <td>241622</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32</th>\n",
+              "      <td>2024-02-16</td>\n",
+              "      <td>6378.100098</td>\n",
+              "      <td>130359</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         Date        price      vol  Week_Number\n",
+              "18 2024-01-29  5871.649902   214390            5\n",
+              "19 2024-01-30  5862.950195   203956            5\n",
+              "20 2024-01-31  5991.100098   588652            5\n",
+              "21 2024-02-01  6124.399902  1071955            5\n",
+              "22 2024-02-02  6237.799805   430426            5\n",
+              "23 2024-02-05  6259.600098   483413            6\n",
+              "24 2024-02-06  6358.549805   316205            6\n",
+              "25 2024-02-07  6308.850098   167852            6\n",
+              "26 2024-02-08  6223.950195   176758            6\n",
+              "27 2024-02-09  6277.899902   154552            6\n",
+              "28 2024-02-12  6269.200195   169271            7\n",
+              "29 2024-02-13  6295.700195   168955            7\n",
+              "30 2024-02-14  6339.950195   151149            7\n",
+              "31 2024-02-15  6360.049805   241622            7\n",
+              "32 2024-02-16  6378.100098   130359            7"
+            ]
+          },
+          "execution_count": 68,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df[df['Date'] > '2024-01-25']"
       ]
     },
     {
@@ -181,6 +403,27 @@
       "source": [
         "profit"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
