--- a/testing.ipynb
+++ b/testing.ipynb
@@ -111,7 +111,7 @@
         "\n",
         "    dates = sorted(dates, key=lambda x: datetime.strptime(x, '%Y-%m-%d'))\n",
         "\n",
-        "    return df1, v_imp_date\n",
+        "    return df1, dates\n",
         "\n",
         "    #return df"
       ]
