--- a/testing.ipynb
+++ b/testing.ipynb
@@ -118,19 +118,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "INFY.NS ['2020-08-21', '2020-08-28', '2020-12-04']\n",
-            " Profit / Loss  ::  233.87668863932288\n",
-            " ------------------- \n",
-            "\n",
             "HCLTECH.NS ['2020-02-28', '2020-03-20', '2020-06-19', '2020-06-26']\n",
-            " Profit / Loss  ::  365.7239990234375\n",
+            " Profit / Loss  ::  161.62238311767578\n",
             " ------------------- \n",
             "\n"
           ]
@@ -141,7 +137,7 @@
           "text": [
             "\n",
             "1 Failed download:\n",
-            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2020-01-01 -> 2020-12-31)')\n"
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2020-01-01 -> 2020-07-31)')\n"
           ]
         },
         {
@@ -149,19 +145,19 @@
           "output_type": "stream",
           "text": [
             "ASIANPAINT.NS ['2020-02-28', '2020-05-08', '2020-05-15']\n",
-            " Profit / Loss  ::  1074.0985514322917\n",
+            " Profit / Loss  ::  135.71244303385424\n",
             " ------------------- \n",
             "\n",
             "SBIN.NS ['2020-03-06']\n",
-            " Profit / Loss  ::  7.08203125\n",
+            " Profit / Loss  ::  -16.31732177734375\n",
             " ------------------- \n",
             "\n",
-            "ITC.NS ['2020-03-06', '2020-03-13', '2020-08-28', '2020-09-04', '2020-09-25', '2020-10-01', '2020-10-09']\n",
-            " Profit / Loss  ::  36.91299002511161\n",
+            "ITC.NS ['2020-03-06', '2020-03-13']\n",
+            " Profit / Loss  ::  32.481414794921875\n",
             " ------------------- \n",
             "\n",
-            "MARUTI.NS ['2020-01-31', '2020-02-28', '2020-03-20', '2020-09-18', '2020-09-25']\n",
-            " Profit / Loss  ::  1455.2912109375002\n",
+            "MARUTI.NS ['2020-01-31', '2020-02-28', '2020-03-20']\n",
+            " Profit / Loss  ::  184.99641927083303\n",
             " ------------------- \n",
             "\n"
           ]
@@ -172,47 +168,47 @@
           "text": [
             "\n",
             "1 Failed download:\n",
-            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1577817000, endDate = 1609353000\")\n"
+            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1577817000, endDate = 1596133800\")\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "TCS.NS ['2020-02-28', '2020-04-09']\n",
+            " Profit / Loss  ::  415.1727294921875\n",
+            " ------------------- \n",
+            "\n",
             "TITAN.NS ['2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  556.6649475097656\n",
+            " Profit / Loss  ::  74.59857177734375\n",
             " ------------------- \n",
             "\n",
-            "SUNPHARMA.NS ['2020-02-20', '2020-10-09', '2020-10-16']\n",
-            " Profit / Loss  ::  117.89717610677081\n",
+            "SUNPHARMA.NS ['2020-02-20']\n",
+            " Profit / Loss  ::  100.77490234375\n",
             " ------------------- \n",
             "\n",
-            "BHARTIARTL.NS ['2020-03-06', '2020-07-31', '2020-08-21', '2020-08-28', '2020-10-01']\n",
-            " Profit / Loss  ::  12.021905517578148\n",
+            "BAJFINANCE.NS ['2020-03-06', '2020-03-13', '2020-03-20']\n",
+            " Profit / Loss  ::  -264.9378255208335\n",
             " ------------------- \n",
             "\n",
-            "BAJFINANCE.NS ['2020-03-06', '2020-03-13', '2020-03-20', '2020-10-16', '2020-12-11']\n",
-            " Profit / Loss  ::  1472.691259765625\n",
-            " ------------------- \n",
-            "\n",
-            "HDFCBANK.NS ['2020-02-20', '2020-02-28', '2020-03-06', '2020-03-13', '2020-03-20', '2020-09-11', '2020-09-18', '2020-09-25']\n",
-            " Profit / Loss  ::  349.35677337646484\n",
+            "HDFCBANK.NS ['2020-02-20', '2020-02-28', '2020-03-06', '2020-03-13', '2020-03-20']\n",
+            " Profit / Loss  ::  40.957275390625\n",
             " ------------------- \n",
             "\n",
             "ICICIBANK.NS ['2020-03-06', '2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  100.64700317382812\n",
+            " Profit / Loss  ::  -33.587249755859375\n",
+            " ------------------- \n",
+            "\n",
+            "LT.NS ['2020-02-28', '2020-03-06', '2020-03-13', '2020-03-20', '2020-07-17', '2020-07-24']\n",
+            " Profit / Loss  ::  -79.25701904296875\n",
             " ------------------- \n",
             "\n",
             "AXISBANK.NS ['2020-03-06', '2020-03-13', '2020-03-20']\n",
-            " Profit / Loss  ::  84.55147298177087\n",
+            " Profit / Loss  ::  -72.39914957682288\n",
             " ------------------- \n",
             "\n",
-            "KOTAKBANK.NS ['2020-03-20', '2020-05-15', '2020-09-11', '2020-09-18']\n",
-            " Profit / Loss  ::  754.4739685058594\n",
-            " ------------------- \n",
-            "\n",
-            "HINDUNILVR.NS ['2020-02-28', '2020-05-08', '2020-05-15', '2020-07-31', '2020-08-07', '2020-08-28', '2020-09-04', '2020-10-30', '2020-11-27']\n",
-            " Profit / Loss  ::  276.23807779947924\n",
+            "KOTAKBANK.NS ['2020-03-20', '2020-05-15']\n",
+            " Profit / Loss  ::  169.24969482421875\n",
             " ------------------- \n",
             "\n"
           ]
@@ -283,16 +279,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "1.0"
+              "0.6428571428571429"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
